fixed wrapping in rate-books-page

--- a/webApp/website/website/static/css/registering.css
+++ b/webApp/website/website/static/css/registering.css
@@ -13,7 +13,7 @@ body {
   
   .sidebar {
     position: fixed;
-    top: 0;
+    top: 2rem;
     /* rtl:raw:
     right: 0;
     */
@@ -25,9 +25,9 @@ body {
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
   }
   
-  @media (max-width: 767.98px) {
+  @media (max-width: 645px) {
     .sidebar {
-      top: 5rem;
+      top: 4rem;
     }
   }
   
@@ -89,6 +89,12 @@ body {
   .form-control-dark:focus {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+  }
+  #progress-main-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 85px 10px;
   }
   #progress {
     position: relative;
